Update MongoDB connection string with new password

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongodb+srv://magnavitalucillia_db_user:<db_password>@sistemateste.tklli8i.mongodb.net/?appName=sistemateste
+mongodb+srv://magnavitalucillia_db_user:Lucillia@2025@sistemateste.tklli8i.mongodb.net/?appName=sistemateste
